# organic-bytes-backend

./: README.md  pyproject.toml
categories/: urls.py
categories/factories/: __init__.py  category_factory.py
categories/models/: categories.py
categories/serializers/: category_serializer.py
categories/viewsets/: __init__.py
core/: settings.py  urls.py
home/: urls.py
home/factories/: __init__.py  hero_factory.py
home/migrations/: 0001_initial.py
home/models/: hero.py
home/serializers/: __init__.py  hero_serializer.py
home/tests/tests_serializers/: test_hero_serializer.py
home/tests/tests_viewsets/: test_hero_viewset.py
home/viewsets/: __init__.py  hero_viewset.py
icons/: urls.py
icons/factories/: __init__.py  icon_factory.py
icons/migrations/: 0001_initial.py
icons/models/: icon.py
icons/serializers/: __init__.py  icon_serializer.py
icons/tests/tests_serializers/: test_icon_serializer.py
icons/tests/tests_viewsets/: test_icon_viewset.py
icons/viewsets/: __init__.py  icon_viewset.py
products/: urls.py
products/factories/: __init__.py  product_factory.py
products/migrations/: 0001_initial.py
products/models/: product.py
products/serializers/: product_serializer.py
products/tests/test_serializers/: test_product_serializer.py
products/tests/test_viewsets/: test_product_viewset.py
products/viewsets/: product_viewset.py
